# skstyle_bot

./: .gitignore  README.md  pyproject.toml
poetry_demo/: __main__.py
skstyle_bot/: __main__.py  comments  data_manager.py  email.py  order_handle.py
tests/: test_poetry_demo.py
