[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["kubaszpak <jakub.szpak.it@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
pytest = "^5.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
