[tool.poetry]
name = "skstyle_bot"
version = "0.1.1"
description = ""
authors = ["kubaszpak <jakub.szpak.it@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
main  = "skstyle_bot.__main__:main"
set_data = "skstyle_bot.data_manager:change_data"
